--- a/src/app/components/user/account/user-order-list/account-order-overlay/account-order-overlay.component.html
+++ b/src/app/components/user/account/user-order-list/account-order-overlay/account-order-overlay.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="top">
             <h2>{{order.madeAt | date:'dd/MM/YYYY HH:mm'}}</h2>
-            <button class="x" (click)="close()"><img src="assets/chiudi.png" alt=""></button>
+            <button class="x" (click)="close()"><img src="assets/chiudi.png" alt="close" i18n-alt></button>
         </div>
         <div class="items">
             <div class="product" *ngFor="let item of order.contents">
@@ -14,7 +14,7 @@
                 </div>
             </div>
         </div>
-        <h2 class="total">Total: {{(order.total/100).toFixed(2)}}€</h2>
+        <h2 class="total"  i18n>Total: {{(order.total/100).toFixed(2)}}€</h2>
         <button class="ok" (click)="close()">OK</button>
     </div>
 </div>
