--- a/src/app/components/user/cart/cart.component.html
+++ b/src/app/components/user/cart/cart.component.html
@@ -1,10 +1,10 @@
 <div class="products">
     <app-product *ngFor="let product of orders.contents" [product]="product.product" [quantity]="product.quantity" (qChanged)="onChangeQ($event,product)"></app-product>
     <div class="push"></div>
-    <h1 *ngIf="orders.contents.length==0">Cart is empty</h1>
+    <h1 *ngIf="orders.contents.length==0" i18n>Cart is empty</h1>
 </div>
 <div class="total">
-    <h2>Total: {{(total()/100).toFixed(2)}}€</h2>
-    <button [disabled]="orders.contents.length==0" (click)="order()">Order</button>
+    <h2 i18n>Total: {{(total()/100).toFixed(2)}}€</h2>
+    <button [disabled]="orders.contents.length==0" (click)="order()" i18n>Order</button>
 </div>
 <app-order-overlay [hidden]="openOrder" (closed)="close()"></app-order-overlay>
