--- a/src/app/components/user/home/quantity-selector-overlay/quantity-selector-overlay.component.html
+++ b/src/app/components/user/home/quantity-selector-overlay/quantity-selector-overlay.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="product!==undefined" class="overlay">
     <div class="container">
-        <button class="x" (click)="close()"><img src="assets/chiudi.png" alt=""></button>
+        <button class="x" (click)="close()"><img src="assets/chiudi.png" alt="close" i18n-alt></button>
         <img [src]="image" alt="">
         <h2>{{product?.name}}</h2>
-        <p class="total">Total: {{((product!.cost*(clamp(1,quantity,99)))/100).toFixed(2)}}€</p>
+        <p class="total" i18n>Total: {{((product!.cost*(clamp(1,quantity,99)))/100).toFixed(2)}}€</p>
         <app-quantity-selector (qChanged)="quantity=$event"></app-quantity-selector>
-        <button class="order" (click)="order()">Add to Cart</button>
+        <button class="order" (click)="order()" i18n>Add to Cart</button>
     </div>
 </div>
