--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
     <h2>Password</h2>
     <input type="password" name="password" [(ngModel)]="password">
     <div class="login-options">
-        <a href="/forgot">password forgot</a>
-        <button (click)="login()">Login</button>
+        <a href="/forgot" i18n>password forgot</a>
+        <button (click)="login()" i18n>Login</button>
     </div>
 </div>
