--- a/src/app/components/user/account/user-order-list/user-order-list.component.css
+++ b/src/app/components/user/account/user-order-list/user-order-list.component.css
@@ -9,8 +9,14 @@
 }
 
 .page{
+    display: flex;
+    flex-direction: row;
     margin: auto 0;
     margin-right: 1em;
+}
+
+.page button{
+    width: 90px !important;
 }
 
 .size{
