--- a/src/app/bar/header/bar-header.component.html
+++ b/src/app/bar/header/bar-header.component.html
@@ -3,8 +3,11 @@
         <a routerLink="home">
             <h1 class="title">PEANO BAR</h1>
         </a>
+        <a routerLink="products">Products</a>
+        <a routerLink="orders">All Orders</a>
     </div>
     <div class="right">
+        <a routerLink="recharge">Rercharge</a>
     </div>
 </div>
 <router-outlet></router-outlet>
