--- a/src/app/bar/home/home.component.css
+++ b/src/app/bar/home/home.component.css
@@ -24,7 +24,7 @@ input[type=radio]:checked + label{
 }
 
 .product{
-    background-color: hsl(0, 0%, 88%);
+    background-color: hsl(0, 0%, 90%);
     border: 1px solid gray;
     border-radius: 1em;
     margin: 1em auto;
@@ -40,4 +40,64 @@ input[type=radio]:checked + label{
     width: 5em;
     margin-left: auto;
     grid-template-columns: 50% 50%;
+}
+
+.complete-order{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 0 1rem;
+    align-items: center;
+    background-color: rgb(111, 239, 209);
+}
+
+.complete-order,.push{
+    height: 100px;
+}
+
+.complete-order button{
+    margin: auto 0;
+    height: 50px;
+    width: 90%;
+    font-size: larger;
+    color: black;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border-radius: 10px;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    background-color: coral;
+    transition: .1s;
+    box-shadow: 0px 2px 10px gray ;
+}
+
+.complete-order button:hover{
+    border-color: gray;
+    border-width: 2px;
+    background-color: rgb(243, 121, 76);
+    box-shadow: 0px 0px 10px gray ;
+    transition: .1s;
+}
+
+.complete-order button:active{
+    border-color: gray;
+    border-width: 2px;
+    background-color: rgb(235, 94, 43);
+    box-shadow: 0px 0px 0px gray ;
+    transition: .1s;
+}
+
+.complete-order button:disabled{
+    background-color: rgb(164, 132, 120);
+    border-color: black;
+    border-width: 0px;
+    box-shadow: 0px 0px 0px gray;
+    transition: .1s;
 }
