--- a/src/app/bar/home/order-toprocess/order-toprocess.component.css
+++ b/src/app/bar/home/order-toprocess/order-toprocess.component.css
@@ -1,19 +1,24 @@
 .container{
     height: fit-content;
-    background-color: hsl(0, 0%, 88%);
+    background-color: hsl(0, 0%, 90%);
     border: 1px solid gray;
     border-radius: 1em;
     margin: 1em auto;
 }
 
+:host:nth-child(even) > .container{
+    background-color: hsl(0, 0%, 82%);
+}
+
 .row{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 10% 40% 30% 10%;
+    justify-content: space-between;
     align-items: center;
 }
 
 .owner{
+    min-width: 200px;
     display: flex;
     flex-direction: column;
 }
@@ -29,6 +34,7 @@
 }
 
 #completed{
+    margin:0 auto;
     appearance: none;
     height: 30px;
     width: 30px;
@@ -36,6 +42,7 @@
     min-width: 30px;
     background-color: white;
     border-radius: 5px;
+    border:1px solid black;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,6 +62,7 @@
 }
 
 .extended{
+    margin:0 auto;
     height: 30px;
     width: 30px;
     display: flex;
@@ -91,5 +99,5 @@
 
 #quantityh3{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 50% 2em;
 }
