Finished Bar module and added canActivate guards

--- a/src/app/bar/header/bar-header.component.css
+++ b/src/app/bar/header/bar-header.component.css
@@ -47,6 +47,10 @@ a{
     font-family: sans-serif;
 }
 
+.right a img{
+    filter: invert();
+}
+
 @media screen and (max-width:600px) {
     .container{
         justify-content: space-evenly;
