--- a/src/app/bar/header/bar-header.component.html
+++ b/src/app/bar/header/bar-header.component.html
@@ -4,10 +4,10 @@
             <h1 class="title">PEANO BAR</h1>
         </a>
         <a routerLink="products">Products</a>
-        <a routerLink="orders">All Orders</a>
     </div>
     <div class="right">
         <a routerLink="recharge">Rercharge</a>
+        <a *ngIf="router.url !== '/login'&&router.url !== '/'" href="logout"><img src="assets/logout2.png" alt="Logout" i18n-alt height="30px"></a>
     </div>
 </div>
 <router-outlet></router-outlet>
