--- a/src/app/bar/products/edit-overlay/edit-overlay.component.html
+++ b/src/app/bar/products/edit-overlay/edit-overlay.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="product!==undefined" class="overlay">
+<div [style.display]="product==undefined ? 'none' : null" class="overlay">
     <div class="container">
         <div class="top">
             <h2 i18n>{{mode}} Product</h2>
@@ -6,19 +6,19 @@
         </div>
         <div class="editor">
             <h3>Product Name:</h3>
-            <input type="text" name="name" id="name" [(ngModel)]="modelProduct!.name">
+            <input *ngIf="product!==undefined" type="text" name="name" id="name" [(ngModel)]="modelProduct!.name">
             <h3>Cost:</h3>
-            <input type="number" name="name" id="name" [(ngModel)]="modelProduct!.cost" (input)="check()">
+            <input *ngIf="product!==undefined" type="number" name="name" id="name" [(ngModel)]="modelProduct!.cost" (input)="check()">
             <h3>Type:</h3>
-            <select name="type" id="type" [(ngModel)]="modelProduct!.type">
+            <select *ngIf="product!==undefined" name="type" id="type" [(ngModel)]="modelProduct!.type">
                 <option value="PANINO">Panino</option>
                 <option value="BIBITA">Bibita</option>
                 <option value="DOLCE">Dolce</option>
             </select>
             <h3>Image:</h3>
-            <app-img-selector [selectedImg]="modelProduct!.img" (onSelected)="select($event)"></app-img-selector>
+            <app-img-selector [selectedImg]="modelProduct?.img" (onSelected)="select($event)"></app-img-selector>
         </div>
         <h2 *ngIf="message.length>0" class="message">{{message}}</h2>
-        <button [disabled]="isDisabled()" class="confirm" (click)="update()" i18n>Confirm</button>
+        <button *ngIf="product!==undefined" [disabled]="isDisabled()" class="confirm" (click)="update()" i18n>Confirm</button>
     </div>
 </div>
