--- a/src/app/bar/products/product/product.component.html
+++ b/src/app/bar/products/product/product.component.html
@@ -2,8 +2,8 @@
     <button id="edit" (click)="edited()"><img src="assets/edit2.png" alt="Edit"></button>
     <img [src]="image">
     <div class="right">
-        <h3>Name: {{product.name}}</h3>
-        <h3>Cost: {{(product.cost/100).toFixed(2)}}€</h3>
-        <h3>Type: {{product.type}}</h3>
+        <h3 i18n>Name: {{product.name}}</h3>
+        <h3 i18n>Cost: {{(product.cost/100).toFixed(2)}}€</h3>
+        <h3 i18n>Type: {{product.type}}</h3>
     </div>
 </div>
