--- a/src/app/bar/products/edit-overlay/edit-overlay.component.html
+++ b/src/app/bar/products/edit-overlay/edit-overlay.component.html
@@ -1,21 +1,21 @@
 <div [style.display]="product==undefined ? 'none' : null" class="overlay">
     <div class="container">
         <div class="top">
-            <h2 i18n>{{mode}} Product</h2>
+            <h2 i18n>{{localize(mode)}} Product</h2>
             <button class="x" (click)="close()"><img src="assets/chiudi.png" alt="close" i18n-alt></button>
         </div>
         <div class="editor">
-            <h3>Product Name:</h3>
+            <h3 i18n>Product Name:</h3>
             <input *ngIf="product!==undefined" type="text" name="name" id="name" [(ngModel)]="modelProduct!.name">
-            <h3>Cost:</h3>
+            <h3 i18n>Cost:</h3>
             <input *ngIf="product!==undefined" type="number" name="name" id="name" [(ngModel)]="modelProduct!.cost" (input)="check()">
-            <h3>Type:</h3>
+            <h3 i18n>Type:</h3>
             <select *ngIf="product!==undefined" name="type" id="type" [(ngModel)]="modelProduct!.type">
                 <option value="PANINO">Panino</option>
                 <option value="BIBITA">Bibita</option>
                 <option value="DOLCE">Dolce</option>
             </select>
-            <h3>Image:</h3>
+            <h3 i18n>Image:</h3>
             <app-img-selector [selectedImg]="modelProduct?.img" (onSelected)="select($event)"></app-img-selector>
         </div>
         <h2 *ngIf="message.length>0" class="message">{{message}}</h2>
