--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
     <h2>Username</h2>
     <input type="text" name="username" [(ngModel)]="username">
     <h2>Password</h2>
-    <input type="password" name="password" [(ngModel)]="password">
+    <input type="password" name="password" [(ngModel)]="password" (keyup.enter)="login()">
     <div class="login-options">
         <a href="/forgot" i18n>password forgot</a>
         <button (click)="login()" i18n>Login</button>
