--- a/src/app/user/account/account.component.html
+++ b/src/app/user/account/account.component.html
@@ -8,9 +8,9 @@
         <h3 i18n>Old Password</h3>
         <input type="password" name="oldPassword" [(ngModel)]="oldPassword" required>
         <h3>Password</h3>
-        <input type="password" autocomplete="none" name="password" (change)="checkPw()" (keypress)="checkPw()" required [(ngModel)]="password">
+        <input type="password" autocomplete="none" name="password" (input)="checkPw()" required [(ngModel)]="password">
         <h3 i18n>Confirm Password</h3>
-        <input type="password" autocomplete="none" name="passwordConfirm" (change)="checkPw()" pattern="(\d|(\d,\d{0,2}))" required [(ngModel)]="passwordConfirm">
+        <input type="password" autocomplete="none" name="passwordConfirm" (input)="checkPw()" pattern="(\d|(\d,\d{0,2}))" required [(ngModel)]="passwordConfirm">
         <h2 [hidden]="message.length==0" class="message">{{message}}</h2>
         <button [disabled]="disabled" (click)="changePw()" type="submit" i18n>Change password</button>
     </div>
