Completed Admin homepage with paging

--- a/src/app/admin/home/classroom/classroom.component.html
+++ b/src/app/admin/home/classroom/classroom.component.html
@@ -1,8 +1,8 @@
-<div class="container" *ngIf="users!=undefined">
+<div class="container" *ngIf="classroom!==undefined">
     <div class="row">
         <button id="edit" (click)="edit()"><img src="assets/edit2.png" alt="Edit"></button>
         <h2>Room: {{classroom!}}</h2>
-        <h3>Users: {{users!.length}}</h3>
+        <!-- <h3>Users: {{users!.length}}</h3> -->
         <div class="extended" (click)="toggleExpansion($event)" [ngClass]="expanded ? 'ext' : ''" [attr.aria-expanded]="expanded">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                  viewBox="0 0 16 16">
@@ -11,7 +11,7 @@
             </svg>
         </div>
     </div>
-    <div *ngIf="expanded" class="accounts">
+    <div *ngIf="expanded&&users!==undefined" class="accounts">
         <app-account *ngFor="let account of users!" [user]="account" (edit)="onEditAccount($event)"></app-account>
     </div>
 </div>
