--- a/src/app/admin/home/home.component.css
+++ b/src/app/admin/home/home.component.css
@@ -72,3 +72,84 @@
     box-shadow: 0px 0px 0px gray;
     transition: .1s;
 }
+
+.selector{
+    display: flex;
+    flex-direction: row;
+}
+
+.page{
+    display: flex;
+    flex-direction: row;
+    margin: auto 0;
+    margin-right: 1em;
+}
+
+.page button{
+    width: 90px !important;
+}
+
+.size{
+    margin: auto 0;
+    margin-left: 1em;
+}
+
+.page button{
+    height: 30px !important;
+    font-size: medium !important;
+}
+
+#prev{
+    border-top-right-radius: 0% !important;
+    border-bottom-right-radius: 0% !important;
+}
+
+#next{
+    border-top-left-radius: 0% !important;
+    border-bottom-left-radius: 0% !important;
+}
+
+#size{
+    font-size: large;
+}
+
+.page button{
+    text-align: center;
+    color: black;
+    height: 30px;
+    width: 75px;
+    font-size: large;
+    margin:auto 0;
+    padding: 0;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    background-color: coral;
+    transition: .1s;
+    box-shadow: 0px 2px 10px gray ;
+}
+
+.page button:hover{
+    border-color: gray;
+    border-width: 2px;
+    background-color: rgb(243, 121, 76);
+    box-shadow: 0px 0px 10px gray ;
+    transition: .1s;
+}
+
+.page button:active{
+    border-color: gray;
+    border-width: 2px;
+    background-color: rgb(235, 94, 43);
+    box-shadow: 0px 0px 0px gray ;
+    transition: .1s;
+}
+
+.page button:disabled{
+    background-color: rgb(164, 132, 120);
+    border-color: black;
+    border-width: 0px;
+    box-shadow: 0px 0px 0px gray;
+    transition: .1s;
+}
