--- a/src/app/admin/orders/order-overlay/order-overlay.component.css
+++ b/src/app/admin/orders/order-overlay/order-overlay.component.css
@@ -1,8 +1,3 @@
-*{
-    font-family: sans-serif;
-    visibility: var(--hidden);
-}
-
 .overlay{
     visibility: var(--hidden);
     position: fixed;
@@ -12,7 +7,7 @@
     bottom: 0;
     z-index: 100;
     backdrop-filter: blur(5px);
-    box-shadow: inset 0 0 2000px rgba(111, 165, 239 , 0.5);
+    box-shadow: inset 0 0 2000px rgba(254, 156, 110, 0.466);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,7 +35,6 @@
 .top{
     display: flex;
     flex-direction: row;
-    justify-content: center;
 }
 
 .top h2{
@@ -51,7 +45,6 @@
 .x{
     height: 30px;
     width: 30px;
-
     margin-top: 10px;
     margin-right: 10px;
     padding: 0;
@@ -61,6 +54,12 @@
 }
 .x > img{
     height: 100%;
+}
+
+.info{
+    display:flex;
+    justify-content: flex-start;
+    margin:1em;
 }
 
 .items{
@@ -89,14 +88,6 @@
     margin: 0;
 }
 
-.message{
-    background-color: var(--msg-bg-color);
-    color: var(--msg-color);
-    border-radius: 10px;
-    padding:10px;
-    margin: 0;
-}
-
 .total{
     margin: 10px;
 }
@@ -114,7 +105,8 @@
     justify-content: space-evenly;
     margin: 0 2em;
 }
-.order{
+
+.ok{
     visibility: var(--hidden);
     font-size: 25px;
     height: 50px;
@@ -132,7 +124,7 @@
     box-shadow: 0px 2px 10px gray ;
 }
 
-.order:hover{
+.ok:hover{
     border-color: gray;
     border-width: 2px;
     background-color: rgb(243, 121, 76);
@@ -140,7 +132,7 @@
     transition: .1s;
 }
 
-.order:active{
+.ok:active{
     border-color: gray;
     border-width: 2px;
     background-color: rgb(235, 94, 43);
@@ -148,15 +140,7 @@
     transition: .1s;
 }
 
-.order:disabled{
-    background-color: rgb(164, 132, 120);
-    border-color: black;
-    border-width: 0px;
-    box-shadow: 0px 0px 0px gray;
-    transition: .1s;
-}
-
-@media (max-width:500px), (max-height:450px)  {
+@media (max-width:600px), (max-height:450px)  {
     .container{
         height: 95%;
         width: 90%;
