--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -1,1 +1,24 @@
-<p>orders works!</p>
+<div class="container">
+    <div class="selector">
+        <div class="page">
+            <button [disabled]="prevDisabled" (click)="pagePrev()" id="prev" i18n>Previous</button>
+            <button [disabled]="nextDisabled" (click)="pageNext()" id="next" i18n>Next</button>
+        </div>
+        <div class="size">
+            <select (change)="sizeChanged()" [(ngModel)]="size" name="size" id="size">
+                <option value="10">10</option>
+                <option value="25">25</option>
+                <option value="50">50</option>
+            </select>
+        </div>
+    </div>
+    <div class="orders">
+        <div *ngFor="let order of orders" class="order-item">
+            <h4>{{order.order.madeAt | date:'dd/MM/YYYY HH:mm':'it-IT'}}</h4>
+            <h4 *ngIf="order.user!==undefined">{{order.user!.fullName}}</h4>
+            <h4 i18n>Total: {{(order.order.total/100).toFixed(2)}}€</h4>
+            <button (click)="openOverlay(order)" i18n>Details</button>
+        </div>
+    </div>
+</div>
+<app-order-overlay (closed)="onClose()" [order]="selectedOrder"></app-order-overlay>
