fixed some bugs and added search to user homepage

--- a/src/app/admin/home/account/account.component.css
+++ b/src/app/admin/home/account/account.component.css
@@ -6,7 +6,7 @@
     justify-content: space-evenly;
     border-style: solid;
     border-radius: 15px;
-    margin: 1em;
+    margin: 1em auto;
     background-color: white;
 }
 #edit{
