--- a/src/app/admin/home/classroom/classroom.component.css
+++ b/src/app/admin/home/classroom/classroom.component.css
@@ -1,11 +1,11 @@
 .container{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     height: fit-content;
     border-style: solid;
     border-radius: 15px;
-    margin: 1em;
+    margin: 1em auto;
     background-color: whitesmoke;
 }
 
@@ -27,7 +27,7 @@
 
 .row{
     width: 95%;
-    padding-left: 2%;
+    padding-right: 2%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -36,7 +36,7 @@
 }
 
 .accounts{
-    width: 100%;
+    width: 95%;
 }
 
 .extended{
