--- a/src/app/user/home/home.component.css
+++ b/src/app/user/home/home.component.css
@@ -2,3 +2,92 @@
     width: 90%;
     margin-left: 5%;
 }
+
+.search{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.searchbox{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#searchbox{
+    margin: .5em 0;
+    height: 30px;
+    width: 200px;
+    font-size: large;
+    border-radius: 10px;
+    border-style: solid;
+}
+
+.searchbox button{
+    appearance: none;
+    border: 1px solid gray;
+    border-radius: 100px;
+    font-size: x-large;
+    height: 30px;
+    width: 30px;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.row{
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+.row input[type=radio]{
+    display: none;
+}
+
+.row input[type=radio] + label{
+    display: flex;
+    align-items: center;
+    width: 97%;
+    height: 30px;
+    justify-content: center;
+    user-select: none;
+    border-radius: 8px;
+    border-style: solid;
+    border-width: 1px;
+    font-size: larger;
+    transition: .1s;
+    box-shadow: 0px 2px 10px gray;
+}
+
+.row #PANINO + label{
+    background-color: rgb(179, 179, 179);
+}
+.row #BIBITA + label{
+    background-color: rgb(179, 179, 179);
+}
+.row #DOLCE + label{
+    background-color: rgb(179, 179, 179);
+}
+
+.row input[type=radio]:hover + label{
+    box-shadow: 0px 0px 10px gray ;
+    transition: .1s;
+}
+
+.row input[type=radio]:checked + label{
+    transition: .1s;
+    box-shadow: 0px 0px 0px gray ;
+}
+
+.row #PANINO:checked + label{
+    background-color: orange;
+}
+.row #BIBITA:checked + label{
+    background-color: green;
+}
+.row #DOLCE:checked + label{
+    background-color: rgb(62, 190, 233);
+}
