--- a/src/app/bar/products/product/product.component.css
+++ b/src/app/bar/products/product/product.component.css
@@ -30,6 +30,7 @@
     display:flex;
     flex-direction: column;
     justify-content: space-evenly;
+    margin-left: .5em;
 }
 @media screen and (max-width:700px) {
     .buy{
@@ -59,7 +60,7 @@
 
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:580px) {
     .container{
         height: auto;
         flex-direction: column;
