--- a/src/app/admin/home/account/account-edit-overlay/account-edit-overlay.component.css
+++ b/src/app/admin/home/account/account-edit-overlay/account-edit-overlay.component.css
@@ -67,6 +67,14 @@
     margin: 0;
 }
 
+#delete{
+    width: 80px !important;
+    height: 25px;
+    padding: 0 10px;
+    font-size: 20px;
+    margin: 10px 10px auto 0px;
+}
+
 .confirm{
     visibility: var(--hidden);
     font-size: 25px;
