--- a/src/app/admin/home/classroom/classroom-edit-overlay/classroom-edit-overlay.component.html
+++ b/src/app/admin/home/classroom/classroom-edit-overlay/classroom-edit-overlay.component.html
@@ -7,7 +7,9 @@
         <div class="editor">
             <h3 i18n>Classroom:</h3>
             <input type="text" name="classroom" id="classroom" [(ngModel)]="modelClassroom">
+            <button class="confirm" id="delete" (click)="deleteCls()">delete</button>
         </div>
+        
         <h2 *ngIf="message.length>0" class="message">{{message}}</h2>
         <button *ngIf="modelClassroom!==undefined" [disabled]="isDisabled()" class="confirm" (click)="update()" i18n>Confirm</button>
     </div>
