--- a/src/app/bar/products/product/product.component.css
+++ b/src/app/bar/products/product/product.component.css
@@ -7,7 +7,7 @@
     height: 200px;
     margin: 1rem 0;
     border-radius: 20px;
-    border-style: solid;
+    border-style: var(--enabled);
     border-color: black;
 }
 
