--- a/src/app/user/product/product.component.css
+++ b/src/app/user/product/product.component.css
@@ -4,7 +4,7 @@
     align-items: center;
     height: 200px;
     margin: 1rem 0;
-    border-style: solid;
+    border-style: var(--enabled);
     border-radius: 20px;
     font-family: sans-serif;
 }
