added account pages for bar and admin

--- a/src/app/admin/header/header.component.html
+++ b/src/app/admin/header/header.component.html
@@ -6,6 +6,7 @@
         <a i18n routerLink="orders">Orders</a>
     </div>
     <div class="right">
+        <a routerLink="account">Account</a>
         <a i18n routerLink="products">Products</a>
         <a *ngIf="router.url !== '/login'&&router.url !== '/'" href="logout"><img src="assets/logout2.png" alt="Logout" i18n-alt height="30px"></a>
     </div>
