--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="search">
         <div class="searchbox">
             <input type="text" name="searchbox" id="searchbox" i18n-placeholder placeholder="search" (input)="search()" [(ngModel)]="searchModel">
-            <button (click)="reset()">×</button>
+            <button (click)="reset()">✕</button>
         </div>
         <div class="row">
             <input type="radio" name="row" id="PANINO" (change)="onChange('PANINO')">
