--- a/src/app/components/resetpw/resetpw.component.css
+++ b/src/app/components/resetpw/resetpw.component.css
@@ -3,7 +3,7 @@
     --border-color: rgb(99, 99, 99);
 }
 
-.login-container{
+.container{
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -17,26 +17,18 @@
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.login-message{
-    visibility: var(--message-visibility);
-    border-color: var(--message-border-color);
-    background-color: var(--color);
-    border-style: solid;
-    border-radius: 0.5em;
-    padding: 1em;
-}
-
-.login-options{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 30px;
-}
-
-.login-options button{
+.message{
+    background-color: var(--msg-bg-color);
+    color: var(--msg-color);
+    border-radius: 10px;
+    padding:10px;
     margin: 0;
-    height: 100%;
-    width: 30%;
+}
+
+button{
+    margin-left: auto !important;
+    height: 30px;
+    width: fit-content;
     font-size: larger;
     color: black;
     box-sizing: border-box;
@@ -51,7 +43,7 @@
     box-shadow: 0px 2px 10px gray ;
 }
 
-.login-options button:hover{
+button:hover{
     border-color: gray;
     border-width: 2px;
     background-color: rgb(243, 121, 76);
@@ -59,7 +51,7 @@
     transition: .1s;
 }
 
-.login-options button:active{
+button:active{
     border-color: gray;
     border-width: 2px;
     background-color: rgb(235, 94, 43);
@@ -67,7 +59,7 @@
     transition: .1s;
 }
 
-.login-options button:disabled{
+button:disabled{
     background-color: rgb(164, 132, 120);
     border-color: black;
     border-width: 0px;
@@ -75,13 +67,8 @@
     transition: .1s;
 }
 
-.login-options a{
-    margin: 0;
-    vertical-align: middle !important;
-}
-
 @media (min-width:600px) {
-    .login-container{
+    .container{
         margin-top: 20vh;
     }
 }
@@ -99,7 +86,7 @@ h2{
     margin-bottom: 0px !important;
 }
 
-.login-container *{
+.container *{
     margin: 1em 0 1em 0;
     font-family: Sans-Serif;
 }
